reorganize routes folder & add testing controller
