# apps/server/routes/root/controllers/index.ts
@@ -1,14 +1,28 @@
 import { Router } from 'express'
 
-import { Root } from './Root'
+import { isProd } from '@online-library/config'
+
+import { Global } from './Global'
+import { Testing } from './Testing'
 
 export const RootController = Router()
 
 RootController.use(
    /*
-   #swagger.tags = ['Root']
+   #swagger.tags = ['Global']
    #swagger.responses[422] = { $ref: "#/definitions/422@data-validation" }
 */
    '/api',
-   Root
+   Global
 )
+
+if (!isProd) {
+   RootController.use(
+      /*
+   #swagger.tags = ['Testing']
+   #swagger.responses[422] = { $ref: "#/definitions/422@data-validation" }
+*/
+      '/api/testing',
+      Testing
+   )
+}
